@@ -1,5 +1,5 @@
 ;;;;;
-;;;;; $Id: commands1.el,v 36.3 1993-05-05 03:10:57 linus Exp $
+;;;;; $Id: commands1.el,v 36.4 1993-05-21 15:43:34 linus Exp $
 ;;;;; Copyright (C) 1991  Lysator Academic Computer Association.
 ;;;;;
 ;;;;; This file is part of the LysKOM server.
@@ -33,7 +33,7 @@
 
 (setq lyskom-clientversion-long 
       (concat lyskom-clientversion-long
-	      "$Id: commands1.el,v 36.3 1993-05-05 03:10:57 linus Exp $\n"))
+	      "$Id: commands1.el,v 36.4 1993-05-21 15:43:34 linus Exp $\n"))
 
 
 ;;; ================================================================
@@ -1452,7 +1452,8 @@ MARK:   A number that is used as the mark."
 		       (lyskom-format 'unmarking-textno text-no)
 		     (lyskom-format 'marking-textno text-no)))
     (initiate-mark-text 'main 'lyskom-mark-text-answer
-			text-no mark text-no mark)))
+			text-no mark text-no mark)
+    (cache-del-text-stat text-no)))
 
 
 (defun lyskom-mark-text-answer (answer text-no mark)
